changes styles in all files

--- a/views/jacketdelete.pug
+++ b/views/jacketdelete.pug
@@ -39,7 +39,7 @@ block content
       }).then((resp) => {
         return resp.json(); // or resp.text() or whatever the server sends
       }).then((body) => {
-        alert("Delete succeded")
+        alert("Jacket deleted successfully")
         window.location.href='/jackets'
         // TODO handle body
       }).catch((error) => {
