--- a/views/jacketdetail.pug
+++ b/views/jacketdetail.pug
@@ -8,14 +8,18 @@ block content
   - let costumesize = result.size
   div
     div.row
-      div(class='costumeAttr mr-3') Jacket ID is: #{costumeid}
+      div(class='costumeAttr mr-3') Jacket ID is: 
+      div #{costumeid}
 
     div.row
-      div(class='costumeAttr mr-3') Jacket Type is: #{costume_type}
+      div(class='costumeAttr mr-3') Jacket Type is: 
+      div #{costume_type}
 
     div.row
-      div(class='costumeAttr mr-3') Jacket Size is: #{costumesize}
+      div(class='costumeAttr mr-3') Jacket Size is:
+      div #{costumesize}
     
     div.row
-      div(class='costumeAttr mr-3') Jacket Cost is: #{costumecost}
+      div(class='costumeAttr mr-3') Jacket Cost is: 
+      div #{costumecost}
        
