--- a/views/jacketupdate.pug
+++ b/views/jacketupdate.pug
@@ -1,3 +1,5 @@
+extends layout
+
 block content
   h1= title
   - let costumeid = result._id
@@ -5,44 +7,41 @@ block content
   - let costumecost = result.cost
   - let costumesize = result.size
 
+  div.row(class='mb-2')
+    div.mr-1 ID is
+      div #{costumeid}
+
   - let actionid = "/resource/jackets/" + costumeid
-  form(id='JacketForm', action = actionid, method="PUT")
+  form(id='CostumeForm', action= actionid, method="PUT")
     div.form-group
-      label.costumeAttr(for='costume_type') Jacket type&nbsp;
+      label.costumeAttr(for='costume_type') Jacket type
+      input#costume_type(type='text', name='costume_type', value= costume_type )
 
-      input#costume_type(type='text', name='costume_type', value=costume_type)
     div.form-group
-      label.costumeAttr(for='size') Jacket size&nbsp;
+      label.costumeAttr(for='size') Jacket size
+      input#size(type='text', name='size', value= costumesize )
 
-      input#costumesize(type='text', name='size', value=costumesize)
     div.form-group
-      label.costumeAttr(for='cost') Jacket cost&nbsp;
-
-      input#costumecost(type='number', name='cost', value=costumecost)
-
-    input#costumeid(type='hidden', name='id', value=costumeid)
+      label.costumeAttr(for='cost') Jacket cost
+      input#cost(type='number', name='cost', value= costumecost )
 
     input(type="submit")
+
   script.
-    document.forms['JacketForm'].addEventListener('submit', (event) => {
+    document.forms['CostumeForm'].addEventListener('submit', (event) => {
       event.preventDefault();
       // TODO do something here to show user that form is being submitted
       fetch(event.target.action, {
         method: 'PUT',
         body: new URLSearchParams(new FormData(event.target)) // event.target is the form
       }).then((resp) => {
-        if(resp.ok){
-            alert ("Jacket Updated Successfully")
-            document.getElementById('JacketForm').reset()
-        }
-        else {
-            alert (" File to Update Jacket")
-        }
+        return resp.json(); // or resp.text() or whatever the server sends
       }).then((body) => {
-        console.log(body)
+        alert("Jacket updated successfully")
         // TODO handle body
       }).catch((error) => {
         // TODO handle error
-        alert("Update failed " + error )
+        alert("Update failed " + error)
       });
     });
+
