changed name in update pug

--- a/views/jacketupdate.pug
+++ b/views/jacketupdate.pug
@@ -7,7 +7,7 @@ block content
 
   h1= title
   if (result == null)
-    h2 No instance to show details of the jacket
+    h2 No instance to update details of the jacket
   else
     - let costumeid = result._id
     - let costume_type = result.costume_type
