--- a/views/jackets.pug
+++ b/views/jackets.pug
@@ -26,23 +26,21 @@ extends layout
 
 block content
   h1= title
+  - let jackets = results;
 
   div(class="container-fluid")
-    div(class="row")
-      - for(let i = 0; i < results.length; i++){
-        div(class="col-sm-2", style = 'cursor: pointer;', id = `res-${i}`) 
-          p JacketName: #{results[i].costume_type}
-          p JacketCost: $#{results[i].cost}
-          p JacketSize: #{results[i].size}
+      each jacket in jackets
+        - let destination = `dispatch("/jackets/update?id=${jacket._id}")`
+        div(class="col-sm-2")
+          p JacketName: #{jacket.costume_type}
+          p JacketCost: $#{jacket.cost}
+          p JacketSize: #{jacket.size}
+        button.btn.btn-sm.btn-primary.ml-1(onclick= destination) Update
+        br 
+        br
 
-        script.
-          (function(index) {
-            document.getElementById(`res-${index}`).addEventListener('click', function() {
-              buy(index); 
-            });
-          })(i);
-      - }
-    script.
-      function buy(index){
-        alert(`You purchased item ${index}`)
-      }
+  script.
+    function dispatch(path) {
+      window.location.href = path;
+    }
+
