--- a/views/index.pug
+++ b/views/index.pug
@@ -1,22 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p 
-    b index.pug is called when localhost:3000 is used
-  button(type = "button", class = "btn btn-info", onclick = "goFaster()") Press Me 
-  br
-  br
-  div(id = "faster") Increase the speed
-
-  script.
-      var mph = 20;
-      var change = 1;
-      function goFaster(){
-        mph += change;
-        change++;
-        document.getElementById("faster").innerHTML = `MPH ${mph} with change ${change}`;
-      }
-  br
-  a(href = "/jackets") path to jackets
-
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/jackets") Take me to Jackets
+    br
+    a(href="/logout") Logout
