added buttons and secured the connections and done with validation in jacket schema

--- a/views/jacketdetail.pug
+++ b/views/jacketdetail.pug
@@ -12,17 +12,17 @@ block content
 
     div
       div.row
-        div(class='costumeAttr mr-3') Jacket ID is: 
-          div #{costumeid}
-
+        div(class='costumeAttr mr-3 col-sm-6') Jacket ID is: 
+        div(class='col-sm-6') #{costumeid}
+      br
       div.row
-        div(class='costumeAttr mr-3') Jacket Type is: 
-          div #{costume_type}
-
+        div(class='costumeAttr mr-3 col-sm-6') Jacket Type is: 
+        div(class='col-sm-6') #{costume_type}
+      br
       div.row
-        div(class='costumeAttr mr-3') Jacket Size is:
-          div #{costumesize}
-    
+        div(class='costumeAttr mr-3 col-sm-6') Jacket Size is:
+        div(class='col-sm-6') #{costumesize}
+      br
       div.row
-        div(class='costumeAttr mr-3') Jacket Cost is: 
-          div #{costumecost}
+        div(class='costumeAttr mr-3 col-sm-6') Jacket Cost is: 
+        div(class='col-sm-6') #{costumecost}
