Added button colors

--- a/views/jackets.pug
+++ b/views/jackets.pug
@@ -21,6 +21,6 @@ block content
           p(class="card-text") Size: #{jacket.size}
           
           div(class="btn-group" role="group")
-            a.btn.btn-primary(href=updateDestination) Update
-            a.btn.btn-success(href=detailDestination) Detail
-            a.btn.btn-danger(href=deleteDestination) Delete
+            a.btn.btn-secondary(href=updateDestination) Update
+            a.btn.btn-info(href=detailDestination) Detail
+            a.btn.btn-primary(href=deleteDestination) Delete
